// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderedList renders with additional HTML attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

<ol
    class="emotion-0"
    id="ordered-list-id"
    role="list"
  />
</DocumentFragment>
`;

exports[`OrderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 16px;
  counter-increment: item-counter;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  min-width: 24px;
}

.emotion-1::before svg {
  fill: #3B3B3B;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      first node
    </li>
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with invalid nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 16px;
  counter-increment: item-counter;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  min-width: 24px;
}

.emotion-1::before svg {
  fill: #3B3B3B;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
  margin-block: 30px;
  padding-inline: 30px;
}

.emotion-1 {
  margin-bottom: 16px;
  counter-increment: item-counter;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1 svg {
  fill: #3B3B3B;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  min-width: 24px;
}

.emotion-1::before svg {
  fill: #3B3B3B;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      first node
    </li>
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  counter-reset: item-counter;
}

.emotion-1 {
  margin-bottom: 4px;
  counter-increment: item-counter;
  color: #D60000;
  font-family: "DM Sans",sans-serif;
  font-size: 18px;
  line-height: 27px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-1::before {
  content: counter(item-counter) '. ';
  color: #3358CC;
  font-family: "DM Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
  display: inline-block;
  min-width: 12px;
}

<ol
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      first node
    </li>
    <li
      class="emotion-1"
    >
      second node
    </li>
    <li
      class="emotion-1"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;
